[gd_scene load_steps=8 format=3 uid="uid://cwld7ti0ms68j"]

[ext_resource type="Script" path="res://player.gd" id="1_3us0m"]
[ext_resource type="PackedScene" uid="uid://lviwd7iyvso6" path="res://Bullet.tscn" id="2_gobh3"]
[ext_resource type="Texture2D" uid="uid://csbbbr46dqbyh" path="res://wrangler_character_02_body.png" id="3_08oa7"]
[ext_resource type="Texture2D" uid="uid://bwyf1rl8vcui" path="res://wrangler_character_02_arm.png" id="4_y7klv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gsdxt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_08oa7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iup3u"]
radius = 7.0
height = 22.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_yta66"]
properties/0/path = NodePath("GunRotation:rotation")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_3us0m")
bullet = ExtResource("2_gobh3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -12)
scale = Vector2(0.71875, 0.74875)
sprite_frames = SubResource("SpriteFrames_gsdxt")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_iup3u")

[node name="GunRotation" type="Node2D" parent="."]
position = Vector2(-2, -20)
rotation = 0.640536

[node name="Arm" type="Sprite2D" parent="GunRotation"]
texture_filter = 1
position = Vector2(5.1893, 3.6154)
rotation = 3.12239
scale = Vector2(0.713184, 0.713184)
texture = ExtResource("4_y7klv")

[node name="BulletSpawn" type="Node2D" parent="GunRotation"]
position = Vector2(18.207, -2.34602)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_yta66")

[node name="LocalWindow" type="SubViewport" parent="."]

[node name="Camera2D" type="Camera2D" parent="LocalWindow"]
unique_name_in_owner = true
